# AoC22

2020/: README.md
2020/day1/: solution.py
2020/day2/: solution.py
2020/day3/: solution.py
2020/day4/: solution.py
2020/day5/: solution.py
2020/day6/: solution.py
2020/day7/: solution.py
2020/day8/: solution.py
2021/: README.md  pyproject.toml
2021/day1/: README.md
2021/day1/part1/: main.py
2021/day1/part2/: main.py
2021/day2/: README.md
2021/day2/part1/: main.py
2021/day2/part2/: main.py
2021/template/: main.py
2022/: README.md
2022/Day 1/: Readme.md  main.py
2022/Day 2/: main.py
2022/Day 3/: Readme.md  main.py
2022/Day 4/: Readme.md
2022/Day 5/: Readme.md
2022/Day 6/: Readme.md  main.py
2022/Day 8/: Readme.md  main.py
2024/: Cargo.toml  README.md  main.rs
2024/task_1/: README.md  mod.rs
2024/task_2/: README.md  mod.rs
2024/task_3/: README.md  mod.rs
2024/task_4/: README.md  mod.rs
2024/task_5/: README.md  mod.rs
2024/task_6/: README.md  mod.rs
Day 2/: Readme.md
Day 4/: main.py
Day 5/: main.py
Day 7/: Readme.md  main.py
