[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = "AoC 2021"
authors = ["amir kamolov <kamolov.amir2000@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
